--- a/ai-assistant-app/package.json
+++ b/ai-assistant-app/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ai-sdk/google": "^1.1.5",
     "@google/generative-ai": "^0.21.0",
     "@huggingface/inference": "^3.1.2",
+    "@opentelemetry/api": "^1.9.0",
     "@pinecone-database/pinecone": "^4.1.0",
     "@radix-ui/react-accordion": "^1.2.2",
     "@radix-ui/react-dialog": "^1.1.5",
@@ -21,7 +23,9 @@
     "ai": "^4.1.8",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "dompurify": "^3.2.3",
     "lucide-react": "^0.474.0",
+    "markdown-it": "^14.1.0",
     "next": "15.1.6",
     "next-themes": "^0.4.4",
     "pinecone": "^0.1.0",
@@ -35,6 +39,7 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
+    "@types/markdown-it": "^14.1.2",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
